--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 regex = "1.10.2"
 num = "0.4.1"
+rayon = "1.8.0"
+rangemap = "1.4.0"
+indicatif = { version = "0.17.7", features = ["rayon"] }
