--- a/day-06/Cargo.toml
+++ b/day-06/Cargo.toml
@@ -13,6 +13,8 @@ tracing-subscriber = { workspace = true }
 miette = { workspace = true }
 thiserror = { workspace = true }
 dhat = { workspace = true }
+rayon = { workspace = true }
+
 
 [dev-dependencies]
 criterion = { workspace = true }
